--- a/templates/base.html
+++ b/templates/base.html
@@ -167,6 +167,18 @@
             transform: translateY(-5px);
             box-shadow: 0px 6px 15px rgba(0,0,0,0.5);
         }
+        
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+        @media (max-width: 768px) {
+            .row.g-4 > [class*="col-"] {
+            flex: 1 0 100% !important;
+            max-width: 100% !important;
+            }
+        }
     </style>
 </head>
 <body>
