--- a/templates/index.html
+++ b/templates/index.html
@@ -16,25 +16,23 @@
           <img src="../static/bl.jpg" alt="BL" class="foto-perfil">
         </div>
           
-        <div class="intro">
-          <h2>Técnico Contabilista e Economista</h2> <br>
-          <p>
-            Olá, sou Castro Lupapa.<br>
-          
-          </p>
-        </div>
+      <!-- Texto -->
+      <div class="col-12 col-md-6">
+        <h2 class="text-success">Técnico Contabilista e Economista</h2>
+        <p class="fs-5">Olá, sou Castro Lupapa.</p>
+      </div>
       </section>
 
             <!-- Botão de Chamada (CTA) -->
       <div style="text-align: center; margin: 3rem 0;">
-          <a href="https://www.scribd.com/document/743160694/TRABALHO-FINAL-DE-CURSO-Botelho-Lupapa-Galiano-Buianga-Domingos-Tunga-e-Julia-Mateus-GRUPO-22-SENEGAL-1-1 " class="btn" style="background-color: var(--accent-green); color: #000; padding: 0.75rem 1.5rem; border-radius: 20px; text-decoration: none; font-weight: bold; transition: background-color 0.3s ease;">
+          <a href="" class="btn" style="background-color: var(--accent-green); color: #000; padding: 0.75rem 1.5rem; border-radius: 20px; text-decoration: none; font-weight: bold; transition: background-color 0.3s ease;">
               Vê os Meus Projetos
           </a>
       </div>
     </main>
 
         <!-- Aside -->
-    <aside class="related-topics">
+    <aside class="features">
       <!-- Features -->
       <section class="features">
             
