--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -8,11 +8,11 @@
         <div style="background-color: var(--bg-card); padding: 2rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
             
             <!-- Foto de perfil (placeholder por enquanto) -->
-            <div style="margin-bottom: 1.5rem;">
+            <div style="margin-bottom: 1.5rem;" class="d-flex justify-content-center">
                 <img 
                     src="{{url_for('static', filename='bl2.jpg')}}" 
                     alt="Economista & Contabilista"
-                    style="width: 300px; height: 300px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-green); box-shadow: 0 0 15px rgba(74, 222, 128, 0.4);">
+                    style="width: 300px; height: 300px; border-radius: 50%; object-fit: cover; border: 2px solid var(--accent-green); box-shadow: 0 0 15px rgba(74, 222, 128, 0.4);"> <br>
             </div>
 
             <h2 style="font-size: 1.8rem; margin-bottom: 1rem; color: var(--text-light);">Botelho Castro Lupapa</h2>
