--- a/templates/base.html
+++ b/templates/base.html
@@ -122,10 +122,12 @@
 
             /* Aside */
         .related-topics {
-        padding: 2rem 0;
-        background: rgba(0, 243, 255, 0.05);
-        border-radius: 1%;
-        size-adjust: inherit;
+            display: flex;
+            flex-wrap: nowrap;
+            padding: 2rem 0;
+            background: rgba(0, 243, 255, 0.05);
+            border-radius: 1%;
+            
         }
         .cab {
             background-color:#1e3a40
@@ -166,6 +168,30 @@
         main .card:hover {
             transform: translateY(-5px);
             box-shadow: 0px 6px 15px rgba(0,0,0,0.5);
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+        @media (max-width: 768px) {
+            .row.g-4 > [class*="col-"] {
+            flex: 1 0 100% !important;
+            max-width: 100% !important;
+            }
+        }
+                /* Esconde a barra de scroll, mas mantém o scroll funcional */
+        .hide-scrollbar {
+            -ms-overflow-style: none;  /* IE, Edge */
+            scrollbar-width: none;     /* Firefox */
+        }
+        .hide-scrollbar::-webkit-scrollbar {
+            display: none;             /* Chrome, Safari, Opera */
+        }
+
+        /* Garante que o conteúdo não ultrapasse a tela */
+        body {
+            overflow-x: hidden;
         }
     </style>
 </head>
